20150526 movie.c,z80/coretest.c: add missing includes (Stuart).
20150526 peripherals/disk/wd_fdc.c: remove return statement at end of void
         function (Stuart).
20150526 movie.c,peripherals/{dck.c,disk/upd_fdc.c,joystick.c},rzx.c,ui/widget/{
         options.pl,query.c}: remove unreachable breaks after returns (Stuart).
20150527 peripherals/disk/plusd.h: remove unused plusd_joy_read() prototype
         (Stuart).
20150527 peripherals/{disk/{disciple.[ch],plusd.[ch]},if1.[ch]}: make DISCiPLE,
         +D and IF1 port handlers be static (Stuart).
20150527 peripherals/disk/opus.h: remove unused opus_joy_read() prototype
         (Stuart).
20150527 machines/{pentagon.[ch],specplus3.[ch],tc2068.[ch]},periph.[ch],
         peripherals/{ay.[ch],disk/{beta.[ch],didaktik.c,disciple.c,plusd.c},
         ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,joystick.[ch],
         kempmouse.c,printer.c,scld.c,speccyboot.c,spectranet.c,ula.c,
         usource.c}: track port attachment for each data bus line (Stuart).
20150601 man/fuse.1: sort fbmode and sound-freq options. Remove duplicate
         doublescan-mode option (Sergio).
20150601 man/fuse.1: add available values for --drive-*-type options (Sergio).
20150601 configure.ac: fix GTK+2 detection when GTK+3 is not available (Sergio).
20150601 peripherals/ide/zxatasp.c: replace bitwise operators with logical
         operators (Stuart).
20150602 Makefile.am,configure.ac: handle libpng being in a non-default
         directory (Fred).
20150603 man/fuse.1: document disabling of disk drives (Stuart).
20150603 utils.c: ensure we have successfully selected a Pentagon or a Timex
         machine before inserting the media (Fred).
20150603 slt.c: remove redundant declaration of buffer (Fred).
20150607 pokefinder/pokemem.c: recognise that libspectrum memory alloation never
         fails (Fred).
20150607 pokefinder/pokemem.c: change functions that cannot fail to return type
         void and make local functions static (Fred).